test/classes/deitz/test_union2.good
x: (-1)
ERROR: Union type error (test_union2.chpl:14)
